移动端侧栏修改

--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -26,17 +26,17 @@ nav:
   enable: false
   travelling: false
   clock: false  # 是否启用 nav 左侧和风天气
-  menu:
-    - title: 网页
-      item:
-        - name: 博客
-          link: https://blog.anheyu.com/
-          icon: /img/favicon.ico
-    - title: 项目
-      item:
-        - name: 安知鱼图床
-          link: https://image.anheyu.com/
-          icon: https://image.anheyu.com/favicon.ico
+  # menu:  # 移动端侧栏
+  #   - title: 网页
+  #     item:
+  #       - name: 博客
+  #         link: https://blog.anheyu.com/
+  #         icon: /img/favicon.ico
+  #   - title: 项目
+  #     item:
+  #       - name: 安知鱼图床
+  #         link: https://image.anheyu.com/
+  #         icon: https://image.anheyu.com/favicon.ico
 
 # mourn （哀悼日，指定日期网站简单变灰，不包括滚动条）
 # 注意： 仅网站首页变灰，其他页面正常显示
