--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -14,6 +14,7 @@ menu:
     追番页: /bangumis/ || anzhiyu-icon-bilibili
     相册集: /album/ || anzhiyu-icon-images
     小空调: /air-conditioner/ || anzhiyu-icon-fan
+    游戏世界: /games/ || icon-youxi
 
   关于:
     关于本人: /about/ || anzhiyu-icon-paper-plane
@@ -25,7 +26,7 @@ menu:
 nav:
   enable: false
   travelling: false
-  clock: false  # 是否启用 nav 左侧和风天气
+  clock: false # 是否启用 nav 左侧和风天气
   # menu:  # 移动端侧栏
   #   - title: 网页
   #     item:
@@ -142,7 +143,7 @@ favicon: /favicon.ico
 
 # Avatar (头像)
 avatar:
-  img: /img/1.gif
+  img: /img/avatar.png
   effect: false
 
 # Disable all banner image
@@ -163,7 +164,7 @@ cover:
   # left/right/both
   position: left
   # When cover is not set, the default cover is displayed (当没有设置cover时，默认的封面显示)
-  default_cover: 
+  default_cover:
     - /img/autumn.png
     - /img/play.png
     - /img/flower.png
@@ -238,7 +239,7 @@ post_copyright:
   enable: true
   decode: false
   author_href:
-  location:  西安
+  location: 西安
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
   avatarSinks: false # hover时头像下沉
@@ -369,7 +370,6 @@ twikoo:
   visitor: false
   option:
 
-
 # Artalk
 # https://artalk.js.org/guide/frontend/config.html
 artalk:
@@ -418,7 +418,7 @@ footer:
   owner:
     enable: true
     since: 2023
-  custom_text: 
+  custom_text:
   runtime:
     enable: false
     launch_time: 10/23/2023 00:00:00 # 网站上线时间
@@ -448,7 +448,7 @@ footer:
         message: 本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可
   socialBar:
     enable: true
-    centerImg:
+    centerImg: /img/1.gif # 页脚头像
     left:
       - title: email
         link: mailto:898581578@qq.com
@@ -638,7 +638,6 @@ theme_color:
   scrollbar_color: "#eccec5"
   meta_theme_color_light: "ffffff"
   meta_theme_color_dark: "#0d0d0d"
-
 
 # 移动端侧栏
 sidebar:
@@ -918,8 +917,8 @@ darkmode:
   # autoChangeMode: 2  Switch dark mode between 6 pm to 6 am
   # autoChangeMode: false
   autoChangeMode: 2
-  start:  8
-  end:  24
+  start: 8
+  end: 24
 
 # Don't modify the following settings unless you know how they work (非必要请不要修改 )
 # Choose: readmode,translate,darkmode,hideAside,toc,chat,comment
@@ -968,10 +967,10 @@ note:
   light_bg_offset: 0
 
 icons:
-  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_wkh99dxq1g.js?spm=a313x.manage_type_myprojects.i1.10.59913a81nv69gj&file=font_4298533_wkh99dxq1g.js # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
+  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_691lki19bti.js?spm=a313x.manage_type_myprojects.i1.12.4bf43a81d4ZTqr&file=font_4298533_691lki19bti.js # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
   fontawesome: false #是否启用fontawesome6图标
   fontawesome_animation_css: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
- #fontawesome_animation 如果有就会加载，示例值：https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
+  #fontawesome_animation 如果有就会加载，示例值：https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
 
 # other
 # --------------------------------------
@@ -1071,14 +1070,14 @@ home_top:
   banner: # 首页右侧轮播图
     tips: 你侬我侬
     title: Qing-Xiao
-    image: /img/banner.webp  # https://bu.dusays.com/2023/05/13/645fa3cf90d70.webp
+    image: /img/banner.webp # https://bu.dusays.com/2023/05/13/645fa3cf90d70.webp
     link: /album # https://docs.anheyu.com/
 
 # 朋友圈配置
 friends_vue:
   enable: true
   vue_js: /js/friends.js
-  apiurl: https://friend.wuyuxi.cn/          # 朋友圈后端地址
+  apiurl: https://friend.wuyuxi.cn/ # 朋友圈后端地址
   top_background: https://dogefs.s3.ladydaily.com/~/source/wallhaven/full/o5/wallhaven-o5l327.jpg?w=2560&h=1440&fmt=webp
 
 # 深色模式粒子效果canvas
@@ -1172,11 +1171,11 @@ greetingBox:
 
 # 文章顶部ai摘要
 post_head_ai_description:
-  enable: false
+  enable: true
   gptName: Qing
   mode: local # 默认模式 可选值: tianli/local
   switchBtn: false # 可以配置是否显示切换按钮 以切换tianli/local
-  btnLink:  #https://afdian.net/item/886a79d4db6711eda42a52540025c377
+  btnLink: #https://afdian.net/item/886a79d4db6711eda42a52540025c377
   randomNum: 3 # 按钮最大的随机次数，也就是一篇文章最大随机出来几种
   basicWordCount: 1000 # 最低获取字符数, 最小1000, 最大1999
   key: xxxx
