🎉 INT COMMIT: 优化细节

--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -1022,7 +1022,7 @@ lazyload:
 # See https://github.com/JLHwung/hexo-offline
 # ---------------
 pwa:
-  enable: false
+  enable: true
   startup_image_enable: true
   manifest: /manifest.json
   theme_color: var(--anzhiyu-main)
@@ -1095,8 +1095,8 @@ console:
 # 51a统计配置
 LA:
   enable: false
-  ck:
-  LingQueMonitorID:
+  ck: 
+  LingQueMonitorID: 
 
 # 标签卖萌
 diytitle:
@@ -1199,7 +1199,7 @@ linkPageTop:
   addFriendPlaceholder: "昵称（请勿包含博客等字样）：\n网站地址（要求博客地址，请勿提交个人主页）：\n头像图片url（请提供尽可能清晰的图片，我会上传到我自己的图床）：\n描述：\n站点截图（可选）：\n"
 
 # 缩略图后缀 archive/tag/category 页面单独开启后缀
-pageThumbnailSuffix: ""
+pageThumbnailSuffix: "!page_thumbnail"
 
 # 隐私协议弹窗
 agreementPopup:
