--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -5,7 +5,7 @@
   buttonLink: /about/
   limit: 30
   home_essay: true
-  top_background: https://cdnjson.com/images/2023/10/24/essay.webp
+  top_background: https://blog.wuyuxi.cn/img/essay/essay.webp
   essay_list:
     - content: 安知鱼主题指南
       date: 2023/09/09
