🎉 INT COMMIT:  优化细节

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -59,4 +59,9 @@
       avatar: https://q2.qlogo.cn/headimg_dl?dst_uin=507249007&spec=640
       link: https://tianli-blog.club
       siteshot: https://q2.qlogo.cn/headimg_dl?dst_uin=507249007&spec=640
-    
+    - name: 琅環书生
+      link: https://www.zhuangzhi.love
+      avatar: https://z1.ax1x.com/2023/10/20/piFQxN8.jpg
+      descr: 无远弗届，皆有可能
+      siteshot: https://z1.ax1x.com/2023/10/24/piEv3Qg.jpg
+
