--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -6,16 +6,26 @@
       link: https://hexo.io/zh-tw/
       avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
       descr: 快速、简单且强大的网站框架
+
     - name: anzhiyu主题
       link: https://blog.anheyu.com/
       avatar: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg
       descr: 生活明朗，万物可爱
       siteshot: https://npm.elemecdn.com/anzhiyu-theme-static@1.1.6/img/blog.anheyu.com.jpg
 
-- class_name: 推荐博客
+- class_name: 推荐
   flink_style: telescopic
   hundredSuffix: ""
   link_list:
+    - name: Qing
+      link: https://blog.wuyuxi.cn/
+      avatar: https://blog.wuyuxi.cn/img/avatar.png
+      descr: 你侬我侬，忒煞情多
+      siteshot: https://blog.wuyuxi.cn/img/site.jpg
+      color: speed
+      tag: 生活
+      recommend: true
+
     - name: 安知鱼
       link: https://blog.anheyu.com/
       avatar: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg
@@ -24,6 +34,28 @@
       color: vip
       tag: 技术
 
+    - name: 杜老师说
+      avatar: https://cdn.dusays.com/avatar.png
+      link:  https://dusays.com
+      siteshot: https://cdn.dusays.com/avatar.png
+
+    - name: 张洪Heo
+      link: https://blog.zhheo.com/
+      avatar: https://bu.dusays.com/2022/12/28/63ac2812183aa.png
+      descr: 分享设计与科技生活
+    
+    - name: 御网尚书的日记本
+      link: https://hack-gov.com.cn
+      avatar: https://websitecssjs.oss-cn-beijing.aliyuncs.com/links/favicon.ico
+      siteshot: https://pic.rmb.bdstatic.com/bjh/a5db82a406a7d2e696e438090b22e2896685.png
+      descr: 愿以赤子之心，共建网络空间安全
+
+    - name: iMaeGoo’s Blog
+      link: https://www.imaegoo.com
+      avatar: https://www.imaegoo.com/images/avatar.jpg
+      siteshot: https://www.imaegoo.com/images/avatar.jpg
+      descr: 虹墨空间站
+
 - class_name: 小伙伴
   class_desc: 那些人，那些事
   flink_style: anzhiyu
@@ -31,7 +63,7 @@
   link_list:
     - name: 安知鱼
       link: https://blog.anheyu.com/
-      avatar: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg
+      avatar: https://npm.elemecdn~.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg
       descr: 生活明朗，万物可爱
       recommend: true  # 【可选】快捷选项，等于color:"" + tag: "荐"
     - name: 煮雪话河山`Blog
@@ -64,4 +96,28 @@
       avatar: https://z1.ax1x.com/2023/10/20/piFQxN8.jpg
       descr: 无远弗届，皆有可能
       siteshot: https://z1.ax1x.com/2023/10/24/piEv3Qg.jpg
-
+    - name: Sunday
+      link: https://blog.wyun521.top/
+      avatar: https://mysource-hexo.wyun521.top/img/avatar/7.jpg
+      descr: 代码改变世界
+      siteshot: https://mysource-hexo.wyun521.top/img/avatar/7.jpg
+    - name: 贰猹的小窝
+      link: https://noionion.top/
+      avatar: https://pub-noionion.oss-cn-hangzhou.aliyuncs.com/head.jpg
+      descr: 用这生命中的每一秒，给自己一个不后悔的未来
+      siteshot: https://pub-noionion.oss-cn-hangzhou.aliyuncs.com/noionion.top.png
+    - name: 摘星怪’ blog
+      link: https://www.hlsiyy.love/
+      avatar: https://a.www.hlsiyy.love/logo/%E5%8D%9A%E5%AE%A2%E5%A4%B4%E5%83%8F.jpg
+      descr: 时光荏苒，流年似水
+      siteshot: https://a.www.hlsiyy.love/logo/%E5%8D%9A%E5%AE%A2%E5%A4%B4%E5%83%8F.jpg
+    - name: 夜雨柠檬
+      link: https://blog.yeyulemon.top/
+      avatar: https://imgbed.yeyulemon.top/uploads/652404e068dd8.png
+      descr: 生于忧患，死于安乐。
+      siteshot: https://imgbed.yeyulemon.top/uploads/6524bbe719a3a.png
+    - name: 辉辉博客
+      link: https://www.zenghui.vip/
+      avatar: https://www.zenghui.vip/logo.png
+      descr: 乘风破浪逐水流，一路晴空月参差。
+      siteshot: https://www.zenghui.vip/logo.png
