--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -7,6 +7,18 @@
   home_essay: true
   top_background: https://blog.wuyuxi.cn/img/essay/essay.webp
   essay_list:
+    - content: 在岁月的长河中，有一种奇妙的力量，
+                它能让万物焕发新生的光芒。
+                这是涅槃的魔力，重生的神奇。
+                曾经，我是一片枯叶，飘荡在命运的涛流中，
+                被世俗的繁杂所困扰，心灵沉寂如死。
+                然而，当我走近涅槃的门槛时，
+                一股温暖的力量轻轻触碰着我。
+                涅槃的火焰熊熊燃烧，将我包裹其中，
+                冰冷的心开始融化，重新燃起希望的火焰。
+                我感受到生命的脉动，那是一种无尽的力量，
+                让我从平凡中超越，追寻内心的自由。     
+      date: 2023/10/27
     - content: 安知鱼主题指南
       date: 2023/09/09
       video:
