--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -63,7 +63,7 @@
   link_list:
     - name: 安知鱼
       link: https://blog.anheyu.com/
-      avatar: https://npm.elemecdn~.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg
+      avatar: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.4/img/avatar.jpg
       descr: 生活明朗，万物可爱
       recommend: true  # 【可选】快捷选项，等于color:"" + tag: "荐"
     - name: 煮雪话河山`Blog
