--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -19,6 +19,10 @@
                 我感受到生命的脉动，那是一种无尽的力量，
                 让我从平凡中超越，追寻内心的自由。     
       date: 2023/10/27
+    - content: Ai 来源于噩梦，却是迷人的。
+      video:
+        - https://files.codelife.cc/itab/defaultWallpaper/videos/v-32.mp4
+      date: 2023/10/27
     - content: 安知鱼主题指南
       date: 2023/09/09
       video:
