--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -1,26 +1,25 @@
 menu:
-  文章:
-    隧道: /archives/ || anzhiyu-icon-box-archive
-    分类: /categories/ || anzhiyu-icon-shapes
-    标签: /tags/ || anzhiyu-icon-tags
-
+  文库:
+    文章列表: /archives/ || anzhiyu-icon-box-archive
+    全部分类: /categories/ || anzhiyu-icon-shapes
+    全部标签: /tags/ || anzhiyu-icon-tags
+  专栏:
+    在线工具: /tool/ || icon-gongju-
+    音乐馆: /music/ || anzhiyu-icon-music
+    # 追番页: /bangumis/ || anzhiyu-icon-bilibili
+    相册集: /album/ || anzhiyu-icon-images
+    游戏世界: /games/ || icon-youxi
   友链:
     友人帐: /link/ || anzhiyu-icon-link
     朋友圈: /fcircle/ || anzhiyu-icon-artstation
     留言板: /comments/ || anzhiyu-icon-envelope
-
-  我的:
-    音乐馆: /music/ || anzhiyu-icon-music
-    追番页: /bangumis/ || anzhiyu-icon-bilibili
-    相册集: /album/ || anzhiyu-icon-images
     小空调: /air-conditioner/ || anzhiyu-icon-fan
-    游戏世界: /games/ || icon-youxi
-
-  关于:
-    关于本人: /about/ || anzhiyu-icon-paper-plane
-    闲言碎语: /essay/ || anzhiyu-icon-lightbulb
-    随便逛逛: javascript:toRandomPost() || anzhiyu-icon-shoe-prints1
+  我的:
     我的装备: /equipment/ || anzhiyu-icon-dice-d20
+    即刻短文: /essay/ || anzhiyu-icon-lightbulb
+    关于本站: /about/ || anzhiyu-icon-paper-plane
+    # 随便逛逛: javascript:toRandomPost() || anzhiyu-icon-shoe-prints1
+    
 
 # nav相关配置
 nav:
@@ -624,6 +623,7 @@ site_verification:
 theme_color:
   enable: true
   main: "#e9b9ab"
+  dark_main: "#e9b9ab"
   paginator: "#eccec4"
   button_hover: "#FF7242"
   text_selection: "#a4e8ea"
@@ -966,8 +966,9 @@ note:
   # Offset also applied to label tag variables. This option can work with disabled note tag.
   light_bg_offset: 0
 
+# icon图标
 icons:
-  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_691lki19bti.js?spm=a313x.manage_type_myprojects.i1.12.4bf43a81d4ZTqr&file=font_4298533_691lki19bti.js # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
+  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_0ec9yg9wcilt.js?spm=a313x.manage_type_myprojects.i1.10.4bf43a81vnwYuI&file=font_4298533_0ec9yg9wcilt.js # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
   fontawesome: false #是否启用fontawesome6图标
   fontawesome_animation_css: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
   #fontawesome_animation 如果有就会加载，示例值：https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
