--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,11 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://blog.wuyuxi.cn
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:day/:title/   
+# permalink: posts/:abbrlink.html
+# abbrlink:
+#   alg: crc32
+#   rep: hex
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
