--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "dev": "hexo clean && hexo deploy && hexo server"
+    "dev": "hexo clean && hexo g && hexo server"
   },
   "hexo": {
     "version": "6.3.0"
