--- a/source/_data/tool.yml
+++ b/source/_data/tool.yml
@@ -26,46 +26,75 @@
         - name: 无损生活
           specification: 全网无损音乐下载
           description: ""
-          image: https://flac.life/logo.png
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/5a/7a/d8/5a7ad872-726f-791e-8b0e-8f51341a500d/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
           link: https://flac.life/
         - name: 音乐解锁
           specification: 加密格式解锁
           description: ""
-          image: https://p.zhheo.com/dR4URl22390481618819763351.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/7f/22/01/7f2201d5-e898-fffe-b034-6c681f356733/AppIcon-0-0-1x_U007emarketing-0-6-0-0-85-220.png/512x512bb.jpg
           link: https://api.zhheo.com/unlockmusic/
         - name: ParseVideo
           specification: B站等全能视频解析下载
           description: ""
-          image: https://p.zhheo.com/57e22257a05764d87c03814366eaf5fd0bb0d904.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/4a/aa/c3/4aaac391-a23f-df03-d343-32bff087a661/logo_youtube_color-1x_U007emarketing-0-6-0-85-220.png/512x512bb.jpg
           link: https://www.parsevideo.com/
         - name: 微信视频
           specification: 下载公众号文章内插入的视频
           description: ""
-          image: https://p.zhheo.com/406cb32e91bca1bcb4601896ddd1625046c1a308.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/98/34/21/983421ca-84e0-a4b2-c415-b86c4130dbd4/AppIcon-0-1x_U007emarketing-0-4-0-sRGB-0-85-220.png/512x512bb.jpg
           link: http://www.15um.com/tools/weixin_v.php
         - name: TED演讲
           specification: 多语言TED视频及字幕下载，建议迅雷
           description: ""
-          image: https://p.zhheo.com/e0c4e69fdf8128868da58bab1de257fb335a3529.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/15/21/bf/1521bfae-5290-93c7-586e-cc8103348deb/AppIcon-0-1x_U007emarketing-0-10-0-0-85-220-0.png/512x512bb.jpg
           link: https://ted2srt.org/
         - name: B站封面
           specification: 提取bilibili的视频封面图片
           description: ""
-          image: https://p.zhheo.com/a1b13b3927c2e2d8bed1254e6c68b8549275d938.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/d7/00/0a/d7000af3-521f-e708-b428-ce87e22dd6de/AppIcon-inter-0-0-1x_U007emarketing-0-0-0-6-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
           link: https://bilicover.magecorn.com/
         - name: 油管字幕
           specification: srt字幕下载工具
           description: ""
-          image: https://p.zhheo.com/8c26fe6f9b50c279b7b004dfc0b299f95dbe7217.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/c0/a1/7d/c0a17d5e-6808-7c1b-d8cf-6755b355a87e/AppIcon-1x_U007emarketing-0-10-0-0-85-220-0.png/512x512bb.jpg
           link: https://downsub.com/
         - name: 网易见外
           specification: 免费视频生成字幕
           description: ""
-          image: https://p.zhheo.com/40a37bbf7874b419228814c86ca56e005f4ba620.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/da/ef/d7/daefd7c9-7845-205e-f827-72d447f24f9a/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
           link: https://jianwai.youdao.com/
         - name: 字幕转换
           specification: srt/lrc字幕转换成fcpxml
           description: ""
-          image: https://p.zhheo.com/49d51dc8989b5838809823bfc0a74f4002696f24.png!cover_mini
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/72/25/45/7225456e-9869-40c2-568a-b15a2d8578f1/AppIcon-0-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg
           link: https://crossub.xiaowude.com/
+    
+
+    - title: 设计素材
+      description: 优秀的素材下载聚合
+      tool_list:
+        - name: 应用图标库
+          specification: App高清图标下载
+          description: ""
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/05/7f/50/057f5014-74d0-ee25-152c-b16cb6c588a6/AppIcon-1x_U007emarketing-0-7-0-85-220-0.png/512x512bb.jpg
+          link: https://icon.zhheo.com/
+        - name: App图标下载
+          specification: 苹果App Store中的应用图标下载
+          description: ""
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/3b/6d/40/3b6d4094-1e48-6be6-39c2-f8b6a66bf646/AppIcon-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg
+          link: https://api.zhheo.com/icon-finder/#!/
+
+    - title: 开发工具
+      description: 好用的开发相关网站
+      tool_list:
+        - name: 路过图床
+          specification: 高速稳定的图片上传和外链服务
+          description: ""
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/74/8e/f8/748ef81a-1e95-d5ac-02b6-00014562212e/AppIcon-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg
+          link: https://unsplash.com/
+        - name: 熊猫图片压缩
+          specification: 热门的图片压缩工具
+          description: ""
+          image: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/34/f5/eb/34f5eba0-77a8-fd9f-05bc-d4af6e675c0e/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
+          link: https://tinypng.com/
         
