🎉 INT COMMIT: 优化

--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -4,9 +4,9 @@ menu:
     全部分类: /categories/ || anzhiyu-icon-shapes
     全部标签: /tags/ || anzhiyu-icon-tags
   专栏:
-    在线工具: /tool/ || icon-gongju-
+    # 在线工具: /tool/ || icon-gongju-
     音乐馆: /music/ || anzhiyu-icon-music
-    # 追番页: /bangumis/ || anzhiyu-icon-bilibili
+    追番页: /bangumis/ || anzhiyu-icon-bilibili
     相册集: /album/ || anzhiyu-icon-images
     游戏世界: /games/ || icon-youxi
   友链:
@@ -23,26 +23,63 @@ menu:
 
 # nav相关配置
 nav:
-  enable: false
+  enable: true
   travelling: false
   clock: false # 是否启用 nav 左侧和风天气
-  # menu:  # 移动端侧栏
-  #   - title: 网页
-  #     item:
-  #       - name: 博客
-  #         link: https://blog.anheyu.com/
-  #         icon: /img/favicon.ico
-  #   - title: 项目
-  #     item:
-  #       - name: 安知鱼图床
-  #         link: https://image.anheyu.com/
-  #         icon: https://image.anheyu.com/favicon.ico
+  menu:  # 移动端侧栏
+    - title: 博客
+      item:
+        - name: 主页
+          link: https://wuyuxi.cn
+          icon:  https://blog.wuyuxi.cn/favicon.ico
+        - name: 博客
+          link: https://blog.wuyuxi.cn
+          icon: https://blog.wuyuxi.cn/img/avatar.png
+    - title: 效率
+      item:
+        - name: ChatGPT
+          link: https://chat.openai.com/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/56/81/da/5681dafe-46b9-5ae0-9150-99ce9e2cf60e/AppIcon-1x_U007emarketing-0-7-0-85-220-0.png/246x0w.webp
+        - name: Midjourney
+          link: https://www.midjourney.com/home/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/a8/f7/d1/a8f7d1da-2979-bf76-9bf7-143d45a04100/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/246x0w.webp
+        - name: 无损音乐
+          link: https://flac.life/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/5a/7a/d8/5a7ad872-726f-791e-8b0e-8f51341a500d/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
+        - name: ParseVideo
+          link: https://www.parsevideo.com/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/4a/aa/c3/4aaac391-a23f-df03-d343-32bff087a661/logo_youtube_color-1x_U007emarketing-0-6-0-85-220.png/512x512bb.jpg
+        - name: 微信视频
+          link: http://www.15um.com/tools/weixin_v.php
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/98/34/21/983421ca-84e0-a4b2-c415-b86c4130dbd4/AppIcon-0-1x_U007emarketing-0-4-0-sRGB-0-85-220.png/512x512bb.jpg
+        - name: B站封面
+          link: https://bilicover.magecorn.com/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/d7/00/0a/d7000af3-521f-e708-b428-ce87e22dd6de/AppIcon-inter-0-0-1x_U007emarketing-0-0-0-6-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
+        - name: 网易见外
+          link: https://jianwai.youdao.com/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/da/ef/d7/daefd7c9-7845-205e-f827-72d447f24f9a/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
+    - title: 设计素材
+      item:
+        - name: 应用图标库
+          link: https://icon.zhheo.com/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/05/7f/50/057f5014-74d0-ee25-152c-b16cb6c588a6/AppIcon-1x_U007emarketing-0-7-0-85-220-0.png/512x512bb.jpg
+        - name: App图标下载
+          link: https://api.zhheo.com/icon-finder/#!/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/3b/6d/40/3b6d4094-1e48-6be6-39c2-f8b6a66bf646/AppIcon-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg
+    - title: 开发工具
+      item:
+        - name: 路过图床
+          link: https://unsplash.com/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/74/8e/f8/748ef81a-1e95-d5ac-02b6-00014562212e/AppIcon-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg
+        - name: 熊猫图片压缩
+          link: https://tinypng.com/
+          icon: https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/34/f5/eb/34f5eba0-77a8-fd9f-05bc-d4af6e675c0e/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.jpg
 
 # mourn （哀悼日，指定日期网站简单变灰，不包括滚动条）
 # 注意： 仅网站首页变灰，其他页面正常显示
 mourn:
   enable: true
-  days: [4-5, 5-12, 7-7, 9-18, 12-13]
+  days: [4-5, 5-12, 7-7, 9-18, 12-13,10-27]
 
 # Code Blocks (代码相关)
 # --------------------------------------
@@ -648,7 +685,7 @@ sidebar:
   menus_items: true
   tags_cloud: true
   display_mode: true
-  nav_menu_project: true
+  nav_menu_project: false
 
 # 文章h2添加分隔线
 h2Divider: true
@@ -925,7 +962,7 @@ darkmode:
 # Don't repeat 不要重複
 rightside_item_order:
   enable: false
-  hide: # readmode,translate,darkmode,hideAside
+  hide:  # readmode,translate,darkmode,hideAside
   show: # toc,chat,comment
 
 # Lightbox (图片大图查看模式)
@@ -968,7 +1005,7 @@ note:
 
 # icon图标
 icons:
-  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_0ec9yg9wcilt.js?spm=a313x.manage_type_myprojects.i1.10.4bf43a81vnwYuI&file=font_4298533_0ec9yg9wcilt.js # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
+  ali_iconfont_js: https://at.alicdn.com/t/c/font_4298533_y8pomkxslt9.js?spm=a313x.manage_type_myprojects.i1.10.4bf43a81rIC0r4&file=font_4298533_y8pomkxslt9.js # 阿里图标symbol 引用链接，主题会进行加载 symbol 引用
   fontawesome: false #是否启用fontawesome6图标
   fontawesome_animation_css: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
   #fontawesome_animation 如果有就会加载，示例值：https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@1.0.17/lib/assets/font-awesome-animation.min.css
@@ -1091,13 +1128,13 @@ bubble:
 
 #  控制台打印信息
 console:
-  enable: true
+  enable: false
 
 # 51a统计配置
 LA:
-  enable: false
-  ck: 
-  LingQueMonitorID: 
+  enable: true
+  ck: KEg2TaPrhMsO3K7D
+  LingQueMonitorID: KEg3A2EvaEIhLrT4
 
 # 标签卖萌
 diytitle:
