--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -96,6 +96,21 @@
       avatar: https://z1.ax1x.com/2023/10/20/piFQxN8.jpg
       descr: 无远弗届，皆有可能
       siteshot: https://z1.ax1x.com/2023/10/24/piEv3Qg.jpg
+    - name: 小旦
+      link: https://satera.cn
+      avatar: https://satera.cn/img/logo.png
+      descr: SNTube Studio
+      siteshot: https://bu.dusays.com/2023/09/16/65052aa7c13c9.png
+    - name: YYSのBlog
+      link: https://blog.wfqyys.cn
+      avatar: https://blog.wfqyys.cn/images/favicon.jpg
+      descr: Be the change that you wish to see in the world.
+      siteshot: https://blog.wfqyys.cn/images/favicon.jpg
+    - name: YYSの小窝
+      link: https://wfqyys.cn
+      avatar: https://blog.wfqyys.cn/images/favicon.jpg
+      descr: May all the beauty be blessed.
+      siteshot: https://blog.wfqyys.cn/images/favicon.jpg
     - name: Sunday
       link: https://blog.wyun521.top/
       avatar: https://mysource-hexo.wyun521.top/img/avatar/7.jpg
