--- a/themes/anzhiyu/_config.yml
+++ b/themes/anzhiyu/_config.yml
@@ -30,7 +30,7 @@ nav:
       item:
         - name: 博客
           link: https://blog.anheyu.com/
-          icon: /img/favicon.ico
+          icon: https://blog.wuyuxi.cn/img/favicon.ico
     - title: 项目
       item:
         - name: 安知鱼图床
@@ -166,8 +166,8 @@ cover:
 
 # Replace Broken Images (替换无法显示的图片)
 error_img:
-  flink: /img/friend_404.gif
-  post_page: /img/404.jpg
+  flink: https://blog.wuyuxi.cn/img/loading.gif
+  post_page: https://blog.wuyuxi.cn/img/404.jpg
 
 # A simple 404 page
 error_404:
@@ -334,7 +334,7 @@ valine:
   guest_info: nick,mail,link # valine comment header info (nick/mail/link)
   recordIP: false # Record reviewer IP
   serverURLs: # This configuration is suitable for domestic custom domain name users, overseas version will be automatically detected (no need to manually fill in)
-  bg: /img/comment_bg.png # valine background
+  bg: https://blog.wuyuxi.cn/img/comment_bg.png # valine background
   emojiCDN: //i0.hdslb.com/bfs/emote/ # emoji CDN
   enableQQ: true # enable the Nickname box to automatically get QQ Nickname and QQ Avatar
   requiredFields: nick,mail # required fields (nick/mail)
@@ -1002,11 +1002,11 @@ pwa:
   startup_image_enable: true
   manifest: /manifest.json
   theme_color: var(--anzhiyu-main)
-  mask_icon: /img/siteicon/apple-icon-180.png
-  apple_touch_icon: /img/siteicon/apple-icon-180.png
-  bookmark_icon: /img/siteicon/apple-icon-180.png
-  favicon_32_32: /img/siteicon/32.png
-  favicon_16_16: /img/siteicon/16.png
+  mask_icon: https://blog.wuyuxi.cn/img/siteicon/apple-icon-180.png
+  apple_touch_icon: https://blog.wuyuxi.cn/img/siteicon/apple-icon-180.png
+  bookmark_icon: https://blog.wuyuxi.cn/img/siteicon/apple-icon-180.png
+  favicon_32_32: https://blog.wuyuxi.cn/img/siteicon/32.png
+  favicon_16_16: https://blog.wuyuxi.cn/img/siteicon/16.png
 
 # Open graph meta tags
 # https://developers.facebook.com/docs/sharing/webmasters/
