--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -40,10 +40,10 @@ nav:
       item:
         - name: Apple
           link: https://www.apple.com.cn/
-          icon: https://cdnjson.com/images/2023/10/29/apple-fill.png
+          icon: https://blog.wuyuxi.cn/img/apple.png
         - name: Github
           link: https://github.com/
-          icon: https://cdnjson.com/images/2023/10/29/github.png
+          icon: https://blog.wuyuxi.cn/img/github.png
 
 
 # mourn （哀悼日，指定日期网站简单变灰，不包括滚动条）
@@ -1141,7 +1141,7 @@ nav_music:
 # 评论匿名邮箱
 visitorMail: # 匿名评论
   enable: true
-  mail: visitor@wuyuxi.cn
+  mail: visitor@blog.wuyuxi.cn
 
 # ptool 文章底部工具
 ptool:
